# sdf-cli

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  coact-facility-overage-daemon.sh  coact-jobs-import.sh  coact-reporegistration-daemon.sh  coact-userregistration-daemon.sh  import-jobs.sh  main.py  pyproject.toml  requirements.txt  sdf-cli-sdf-ansible-integration.md  sdf.py  sdf_click.py
.github/workflows/: ci-cd.yaml
commands/: coact.py  coactd.py  file.py  ldap.py  repo.py  user.py
commands/grpr/: addMemberToGroup.py  createNewGroup.py  findGroups.py  findUser.py  getGroupMembers.py  removeMemberToGroup.py
commands/utils/: graphql.py  ldap.py
docs/: slurmrest_migration.md
modules/: __init__.py  base.py  coact.py  coactd.py  slurmrest.py
modules/utils/: __init__.py  graphql.py  ldap.py
openapi-specs/: slurmrest-api-v0.0.44.json
sdf/: menu.py
tests/: __init__.py  conftest.py  test_facility_compute_allocation.py  test_node_allocation.py  test_repo_registration_gid.py  test_slurm_import.py  test_slurm_node_memory.py
