[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sdf-cli"
version = "0.1.0"
description = "CLI for SDF"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cliff==3.10.1",
    "click>=8.0.0",
    "gql[all]>=3.4.1",
    "ansible-runner==2.3.1",
    "Jinja2>=3.1.2",
    "pendulum>=3.2.0",
    "tzlocal>=5.3.1",
    "loguru>=0.7.0",
    "openapi_client",
]

[tool.uv.sources]
openapi_client = { path = "slurmrest_client", editable = true }

[dependency-groups]
dev = [
    {include-group = "test"},
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools]
packages = [] # Application-only repo

# Test configuration
[tool.pytest]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
]
